Not feeling like deleting all npm packages just to switch branches thanks

--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -184,3 +185,5 @@ Temporary Items
 .apdisk
 
 *.before
+tgui/
+tmp/
